fix alignment

--- a/stylesheets/stylesheet.scss
+++ b/stylesheets/stylesheet.scss
@@ -19,6 +19,10 @@ html, body {
   //background: #333;
 }
 
+#sidebarTopics a {
+  text-align: left;
+}
+
 header {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#153e50+0,003380+100 */
   background: #153e50; /* Old browsers */
